--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nikhilsaini99.github.io/",
+  "homepage": "https://nikhilsaini99.github.io/Todo-App",
   "name": "todo-app-with-mui",
   "version": "1.0.0",
   "description": "",
