--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nikhilsaini99.github.io/",
+  "homepage": "http://nikhilsaini99.github.io/Todo-App",
   "name": "todo-app-with-mui",
   "version": "1.0.0",
   "description": "",
@@ -23,13 +23,12 @@
     "typescript": "4.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-
   },
   "browserslist": [
     ">0.2%",
