--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://nikhilsaini99.github.io/Todo-App",
-  "name": "todo-app-with-mui",
+  "homepage": "http://NikhilSaini99.github.io/Todo-App",
+  "name": "todoapp",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
